--- a/axioms/word/cond.tex
+++ b/axioms/word/cond.tex
@@ -50,11 +50,13 @@ the set $S = {1,2,3, \ldots,n}$. Find $P[r\le p|s\le p]$.
 \solution 
 \input{exemplar/12/13/3/34/main.tex}
 \item Three bags contains a no of red and white balls as follows:
-$B_1$: 3 red balls,$B_2$:2 red balls and 1 white ball,$B_3$:3 white balls
-The probability that bag i will be chosen and a ball is selected is i/6,i=1,2,3.
+$B_1$: 3 red balls, $B_2$: 2 red balls and 1 white ball, $B_3$: 3 white balls.
+The probability that bag $i$ will be chosen and a ball is selected is $i/6, i=1,2,3$.
 what is the probability that
-(i) a red ball will be selected?     
-(ii) a white ball will be selected?\\
+\begin{enumerate}
+	\item a red ball will be selected?     
+	\item  a white ball will be selected?
+\end{enumerate}
 \solution
 \input{exemplar/12/13/3/41/ncert.tex}
 \item Refer to Question 41 above. If a white ball is selected, what is the probability that it came from\\
