--- a/axioms/word/cond.tex
+++ b/axioms/word/cond.tex
@@ -49,7 +49,7 @@ the set $S = {1,2,3, \ldots,n}$. Find $P[r\le p|s\le p]$.
 \\
 \solution 
 \input{exemplar/12/13/3/34/main.tex}
-\item Three bags contains a no of red and white balls as follows:
+\item Three bags contain a number of red and white balls as follows:
 $B_1$: 3 red balls, $B_2$: 2 red balls and 1 white ball, $B_3$: 3 white balls.
 The probability that bag $i$ will be chosen and a ball is selected is $i/6, i=1,2,3$.
 what is the probability that
