--- a/axioms/word/cond.tex
+++ b/axioms/word/cond.tex
@@ -53,16 +53,18 @@ the set $S = {1,2,3, \ldots,n}$. Find $P[r\le p|s\le p]$.
 $B_1$: 3 red balls, $B_2$: 2 red balls and 1 white ball, $B_3$: 3 white balls.
 The probability that bag $i$ will be chosen and a ball is selected is $i/6, i=1,2,3$.
 what is the probability that
+\label{prob:12/13/3/41}
 \begin{enumerate}
 	\item a red ball will be selected?     
 	\item  a white ball will be selected?
 \end{enumerate}
 \solution
 \input{exemplar/12/13/3/41/ncert.tex}
-\item Refer to Question 41 above. If a white ball is selected, what is the probability that it came from\\
+%
+\item Refer to \probref{prob:12/13/3/41}. If a white ball is selected, what is the probability that it came from
 \begin{enumerate}
-\item  Bag 2
-\item  Bag 3
+\item  $B_2$
+\item  $B_3$
 \end{enumerate}
 \solution
 %\input{exemplar/12/13/3/42/main.tex}
