12/13/3/42 in exemplar complete

--- a/axioms/word/cond.tex
+++ b/axioms/word/cond.tex
@@ -67,7 +67,7 @@ what is the probability that
 \item  $B_3$
 \end{enumerate}
 \solution
-%\input{exemplar/12/13/3/42/main.tex}
+\input{exemplar/12/13/3/42/main.tex}
 \item If P(A) = $\frac{4}{5}$ and P(AB) = $\frac{7}{10}$, then $P(B|A)$ is equal to\\
 \solution
 %\input{exemplar/12/13/3/56/main.tex}
