reorganized NCERT till conditional probability.

--- a/axioms/word/axioms.tex
+++ b/axioms/word/axioms.tex
@@ -1,4 +1,4 @@
-\begin{enumerate}[label=\thesubsection.\arabic*,ref=\thesubsection.\theenumi]
+\begin{enumerate}[label=\thesubsection.\arabic*,ref=\thesubsection.\theenumi,resume*]
 		%
 \item If $A$ and $B$ are two candidates seeking admission in an engineering College. The probability that $A$ is selected is 0.5 and the probability that both $A$ and $B$ are selected is atmost 0.3. Is it possible that the probability of $B$ getting selected is 0.7?\\
 \solution 
