--- a/axioms/word/cond.tex
+++ b/axioms/word/cond.tex
@@ -70,9 +70,10 @@ what is the probability that
 \input{exemplar/12/13/3/42/main.tex}
 \item If P(A) = $\frac{4}{5}$ and P(AB) = $\frac{7}{10}$, then $P(B|A)$ is equal to\\
 \solution
-%\input{exemplar/12/13/3/56/main.tex}
+\input{exemplar/12/13/3/56/main.tex}
 \item A flashlight has 8 batteries out of which 3 are dead. If two batteries are selected without replacement and tested, find the probability that both are dead.\\
-%\input{exemplar/12/13/3/80/main.tex}
+\solution
+\input{exemplar/12/13/3/80/main.tex}
 \item Assume that in a family, each child is equally likely to be a boy or a girl. A family with three children is chosen at random. The probability that the eldest child is a girl given that the family has at least one girl is
 \begin{enumerate}
 \item $\frac{1}{2}$
