--- a/exemplar/12/13/3/80/main.tex
+++ b/exemplar/12/13/3/80/main.tex
@@ -1,4 +1,5 @@
-Let the random variable be $X_i$ for denoting the battery being dead.
+Let $X_i \in \cbrak{0,1}, i \in 1,2$ represent the $i$th battery, 0 denoting the battery being dead.
+\iffalse
 \begin{table}[h!]
 \centering
 \begin{tabular}{|c|c|c|} \hline
@@ -9,10 +10,13 @@ $n$ & no of batteries selected & 2\\\hline
 \caption{ definition of random variables}
 \label{Tab:12.13.3.80}
 \end{table}
+\fi
+From the given information,
 \begin{align}
-\pr{X_1=0}&=\frac{3}{8}\\
-\pr{X_2=0|X_1=0}&=\frac{\pr{X_2=0}\pr{X_1=0}}{\pr{X_1=0}}\\
-\pr{X_2=0}\pr{X_1=0}&=\pr{X_1=0}\pr{X_2=0|X_1=0}\\
-&=\frac{3}{8}\times\frac{2}{7}\\
-&=\frac{3}{28}
+	\pr{X_1=0}&=\frac{3}{8}, \pr{X_2=0|X_1=0}=\frac{2}{7}, 
+\\
+\implies 
+\pr{X_1=0, X_2=0}&=\pr{X_1=0}\pr{X_2=0|X_1=0} =\frac{3}{28}
 \end{align}
+from
+\eqref{eq:axiom-cond}.
