--- a/axioms/boolean/rand.tex
+++ b/axioms/boolean/rand.tex
@@ -1,4 +1,12 @@
 \begin{enumerate}[label=\thesubsection.\arabic*,ref=\thesubsection.\theenumi]
+\item Assume that in a family, each child is equally likely to be a boy or a girl. A family with three children is chosen at random. The probability that the eldest child is a girl given that the family has at least one girl is
+\begin{enumerate}
+\item $\frac{1}{2}$
+\item $\frac{1}{3}$
+\item $\frac{2}{3}$
+\item $\frac{4}{7}$
+\end{enumerate}
+\input{exemplar/12/13/3/77/assignment7.tex}
 \item State whether the statement is True or False. The probabilities that a typist will make 0, 1, 2, 3, 4, 5 or more mistakes in typing a report are, respectively, 0.12, 0.25, 0.36, 0.14, 0.08, 0.11.\\
 \solution
 \input{exemplar/11/16/3/32/main.tex}
