--- a/main.tex
+++ b/main.tex
@@ -98,6 +98,8 @@ https://www.gnu.org/licenses/fdl-1.3.en.html
 \input{axioms/boolean/cond.tex}
 \input{axioms/word/cond.tex}
 \section{Random Variables}
+\subsection{Formulae}
+\subsection{NCERT}
 \input{axioms/boolean/rand.tex}
 \subsection{Examples}
 \input{randm/defs.tex}
