ncert/12/13/1/3 done.  new conditional probability subsection

--- a/axioms/boolean/cond.tex
+++ b/axioms/boolean/cond.tex
@@ -1,4 +1,4 @@
-\begin{enumerate}[label=\thesubsection.\arabic*,ref=\thesubsection.\theenumi]
+\begin{enumerate}[label=\thesubsection.\arabic*,ref=\thesubsection.\theenumi,resume*]
 \item Let $\pr{A} = \frac{7}{13}$, $\pr{B} = \frac{9}{13}$, $\pr{AB} = \frac{4}{13}$. Then $\pr{A^{\prime}|B}$ is equal to
 \begin{multicols}{4}
 \begin{enumerate}
