--- a/axioms/word/cond.tex
+++ b/axioms/word/cond.tex
@@ -1,4 +1,4 @@
-\begin{enumerate}[label=\thesubsection.\arabic*,ref=\thesubsection.\theenumi]
+\begin{enumerate}[label=\thesubsection.\arabic*,ref=\thesubsection.\theenumi,resume*]
 	\item An electronic assembly consists of two subsystems, say $A$ and $B$. From previous testing procedures, the following probabilities are assumed to be known
 \begin{align}
 \pr{A\text{ fails}}&=0.20
