--- a/main.tex
+++ b/main.tex
@@ -95,17 +95,17 @@ https://www.gnu.org/licenses/fdl-1.3.en.html
 \subsection{Formulae}
 \input{app/cond.tex}
 \subsection{NCERT}
+\input{ncert/cond.tex}
 \input{axioms/boolean/cond.tex}
 \input{axioms/word/cond.tex}
 \section{Random Variables}
 \subsection{Formulae}
 \subsection{NCERT}
 \input{axioms/boolean/rand.tex}
-\subsection{Examples}
+%\subsection{Examples}
 \input{randm/defs.tex}
-\section{Conditional Probability}
-\subsection{Examples}
-\input{ncert/cond.tex}
+%\section{Conditional Probability}
+%\subsection{Examples}
 %\section{Discrete Distributions}
 \section{Bernoulli}
 \input{ncert/bernoulli.tex}
