--- a/ncert/cond.tex
+++ b/ncert/cond.tex
@@ -1,24 +1,14 @@
-\begin{enumerate}[label=\thesection.\arabic*,ref=\thesection.\theenumi]
+\begin{enumerate}[label=\thesubsection.\arabic*,ref=\thesubsection.\theenumi]
 	\item 
 Given that E and F are events such that $P(E)=0.6, P(F)=0.3$ and $P(E F)=0.2$, find $P(E \mid F)$ and $P(F \mid E)$.
 \\
-%\input{ncert/12/13/1/1/cond.tex}
+\input{ncert/12/13/1/1/cond.tex}
 	\item Compute $\pr{A|B}$, if $\pr{B}=0.5$ and $\pr{AB}=0.32$. 
 		\\
-	\item Probability that A speaks truth is
-$\frac{4}{5}$ . A coin is tossed. A reports that a head
-appears. The probability that actually there was head is
-\begin{enumerate}
-    \item $\frac{4}{5}$ 
-\item $\frac{1}{2}$ 
-\item $\frac{1}{5}$ 
-\item $\frac{2}{5}$
-\end{enumerate}
-	\item Compute $\pr{A|B}$, if $\pr{B}=0.5$ and $\pr{AB}=0.32$. 
-		\\
-		%\input{ncert/12/13/1/2/cond.tex}
-
-	\item If $\pr{A}$ = 0.8, $\pr{B} = 0.5$ and $\pr{B \vert A = 0.4}$, find  
+		\solution
+		\input{ncert/12/13/1/2/main.tex}
+	\item If $\pr{A}$ = 0.8, $\pr{B} = 0.5$ and $\pr{B \vert A} = 0.4$, find  
+\begin{multicols}{3}
 \begin{enumerate}
 \item
 $\pr{AB}$ 
@@ -27,8 +17,9 @@ $\pr{AB}$
 \item
  $\pr{A+B}$
 \end{enumerate}
+\end{multicols}
 \solution
-%%\input{ncert/12/13/1/3/axioms.tex}
+\input{ncert/12/13/1/3/main.tex}
 \iffalse
 	\item If $\pr{A}=\frac{6}{11}$, $\pr{B}=\frac{5}{11}$ and $\pr{A+B}=\frac{7}{11}$, find
 \begin{enumerate}
@@ -285,5 +276,17 @@ have TB is 0.001. In a certain city, 1 in 1000 people suffers from TB. A person
 is selected at random and is diagnosed to have TB. What is the probability that
 he actually has TB? \\
 %\input{exemplar/12/13/3/47/main.tex}
+	\item Compute $\pr{A|B}$, if $\pr{B}=0.5$ and $\pr{AB}=0.32$. 
+	\item Probability that $A$ speaks truth is
+$\frac{4}{5}$ . A coin is tossed. A reports that a head
+appears. The probability that actually there was head is
+\begin{multicols}{4}
+\begin{enumerate}
+    \item $\frac{4}{5}$ 
+\item $\frac{1}{2}$ 
+\item $\frac{1}{5}$ 
+\item $\frac{2}{5}$
+\end{enumerate}
+\end{multicols}
 \end{enumerate}
 
