--- a/ncert/cond.tex
+++ b/ncert/cond.tex
@@ -20,16 +20,17 @@ $\pr{AB}$
 \end{multicols}
 \solution
 \input{ncert/12/13/1/3/main.tex}
-\iffalse
 	\item If $\pr{A}=\frac{6}{11}$, $\pr{B}=\frac{5}{11}$ and $\pr{A+B}=\frac{7}{11}$, find
+
+		\begin{multicols}{3}
 \begin{enumerate}
 	\item $\pr{AB}$   
 	\item $\pr{A \mid B}$
 	\item $\pr{B \mid A}$
 \end{enumerate}
+\end{multicols}
 \solution
-		%\input{ncert/12/13/1/5/axioms.tex}
-\fi
+		\input{ncert/12/13/1/5/axioms.tex}
 \item Mother, Father and Son line up at random for a family picture. Determine \pr{E \mid F} where 
 $E$: Son on one end, $F$: Father in middle\\
 \solution
