--- a/ncert/cond.tex
+++ b/ncert/cond.tex
@@ -32,9 +32,9 @@ $\pr{AB}$
 \solution
 		\input{ncert/12/13/1/5/axioms.tex}
 \item Mother, Father and Son line up at random for a family picture. Determine \pr{E \mid F} where 
-$E$: Son on one end, $F$: Father in middle\\
+$E$: Son on one end, $F$: Father in middle.
 \solution
-		%\input{ncert/12/13/1/9/cond.tex}
+		\input{ncert/12/13/1/9/cond.tex}
 	\item Assume that each born child is equally likely to be a boy or a girl. If a family has
 two children, what is the conditional probability that both are girls given that
 \begin{enumerate}
