--- a/ncert/cond.tex
+++ b/ncert/cond.tex
@@ -33,16 +33,9 @@ $\pr{AB}$
 		\input{ncert/12/13/1/5/axioms.tex}
 \item Mother, Father and Son line up at random for a family picture. Determine \pr{E \mid F} where 
 $E$: Son on one end, $F$: Father in middle.
+\\
 \solution
 		\input{ncert/12/13/1/9/cond.tex}
-	\item Assume that each born child is equally likely to be a boy or a girl. If a family has
-two children, what is the conditional probability that both are girls given that
-\begin{enumerate}
-	\item  The youngest is a girl
-	\item  At least one is a girl
-\end{enumerate}
-\solution
-		%\input{ncert/12/13/1/12/main.tex}
 	\item An instructor has a question bank consisting of 300 easy True / False questions,
 200 difficult True / False questions, 500 easy multiple choice questions and 400
 difficult multiple choice questions. If a question is selected at random from the
@@ -50,15 +43,16 @@ question bank, what is the probability that it will be an easy question given th
 is a multiple choice question?
 \\
 \solution
-		%\input{ncert/12/13/1/13/main.tex}
+		\input{ncert/12/13/1/13/main.tex}
 \item If $ \pr{A}  = \frac{1}{2}$, $\pr{B} = 0$, then $\pr{A \mid B}$ is
+	\begin{multicols}{4}
 \begin{enumerate}
 \item 0
 \item $\frac{1}{2}$
 \item not defined
 \item 1
 \end{enumerate}
-	%\input{ncert/12/13/1/16/cond.tex}
+\end{multicols}
  \item If $A$ and $B$ are events such that 
     \begin{align}
         \pr{A|B} = \pr{B|A}
