--- a/ncert/dist.tex
+++ b/ncert/dist.tex
@@ -361,4 +361,12 @@ then $p$ is ?
 %\input{ncert/12/13/6/7/main.tex}
 \item A fair coin is tossed four times and a person win Re 1 for each head and lose Re 1.5 for each tail that turns up.from the sample space calculate how many different amounts of money you can have after four tosses and the probability of having each of these amounts.\\
 %\input{ncert/9/3/20/main.tex}
+	\item Assume that each born child is equally likely to be a boy or a girl. If a family has
+two children, what is the conditional probability that both are girls given that
+\begin{enumerate}
+	\item  The youngest is a girl
+	\item  At least one is a girl
+\end{enumerate}
+\solution
+		\input{ncert/12/13/1/12/binom.tex}
 \end{enumerate}
