--- a/ncert/cond.tex
+++ b/ncert/cond.tex
@@ -59,34 +59,39 @@ is a multiple choice question?
         \label{eq:ncert/12/13/1/17/cond}
     \end{align} 
     then 
+
+    \begin{multicols}{4}
     \begin{enumerate}
         \item $A \subset B$ but $A \neq B$
         \item $A = B$ 
         \item $A \cap B = \phi$ 
         \item $\pr{A} = \pr{B}$
     \end{enumerate}
+\end{multicols}
     \solution
-%\input{ncert/12/13/1/17/axioms.tex}
+\input{ncert/12/13/1/17/axioms.tex}
  \item Consider the experiment of throwing a die, if a multiple of 3 comes up, 
     throw the die again and if any other number comes, toss a coin. Find the 
     conditional probability of the event `the coin shows a tail', given that `at 
     least one die shows a 3'.
-\\
-\solution
+%\\
+%\solution
 %\input{ncert/12/13/1/15/cond.tex}
 %
 \item Two cards are drawn at random and without replacement from a pack of 52 playing cards. Find the probability that both the cards are black.\\
 \solution
-%\input{ncert/12/13/2/2/cond.tex}
+\input{ncert/12/13/2/2/cond.tex}
 %
 \item Let $A$ and $B$ be independent events with $P(A)=0.3$ and $P(B)=0.4$. Find
 		\label{ncert/12/13/2/7}
+    \begin{multicols}{4}
 \begin{enumerate}
 \item $P(A \cap B)$
 \item $P(A \cup B)$
 \item $P(A|B)$
 \item $P(B|A)$
 \end{enumerate}
+\end{multicols}
 %
 \item An urn contains 5 red and 5 black balls. A ball is drawn at random, its colour is
 noted and is returned to the urn. Moreover, 2 additional balls of the colour drawn
@@ -95,7 +100,7 @@ the second ball is red?
 		\label{ncert/12/13/3/1}
 \\
 \solution
-%\input{ncert/12/13/3/1/cond.tex}
+\input{ncert/12/13/3/1/cond.tex}
 \item A bag contains 4 red and 4 black balls, another bag contains 2 red and 6 black
 balls. One of the two bags is selected at random and a ball is drawn from the bag
 which is found to be red. Find the probability that the ball is drawn from the
