--- a/ncert/cond.tex
+++ b/ncert/cond.tex
@@ -111,11 +111,11 @@ day scholars (not residing in hostel). Previous year results report that 30\% of
 students who reside in hostel attain A grade and 20\% of day scholars attain A
 grade in their annual examination. At the end of the year, one student is chosen
 at random from the college and he has an A grade, what is the probability that the
-student is a hostlier?     
+student is a hostelier?     
 		\label{ncert/12/13/3/3}
 \\
 \solution
-%\input{ncert/12/13/3/3/main.tex}
+\input{ncert/12/13/3/3/main.tex}
 \item In answering a question on a multiple choice test, a student either knows the
 answer or guesses. Let
 $\frac{3}{4}$ be the probability that he knows the answer and
@@ -125,7 +125,7 @@ answer will be correct with probability
 $\frac{1}{4}$. What is the probability that the student knows the answer given that he answered it correctly?
 \\
 \solution
-%\input{ncert/12/13/3/4/cond.tex}
+\input{ncert/12/13/3/4/cond.tex}
 \item A laboratory blood test is 99\% effective in detecting a certain disease when it is
 in fact, present. However, the test also yields a false positive result for 0.5\% of
 the healthy person tested (i.e. if a healthy person is tested, then, with probability
