--- a/ncert/12/13/3/1/cond.tex
+++ b/ncert/12/13/3/1/cond.tex
@@ -3,14 +3,14 @@ The given information is summarized in Tables \ref{tab:12/13/3/1/1} and
 \begin{table}[h]
 \centering
 \input{ncert/12/13/3/1/tables/table1.tex}
-\caption{Random variables X,Y}
+\caption{}
 \label{tab:12/13/3/1/1}
 \end{table}
 %
 \begin{table}[h]
 \centering
 \input{ncert/12/13/3/1/tables/table2.tex}
-\caption{Probabilities}
+\caption{}
 \label{tab:12/13/3/1/2}
 \end{table}\\
 The required probability is given by
