--- a/ncert/cond.tex
+++ b/ncert/cond.tex
@@ -134,7 +134,7 @@ actually has the disease, what is the probability that a person has the disease
 given that his test result is positive ?
 \\
 \solution
-%\input{ncert/12/13/3/5/main.tex}
+\input{ncert/12/13/3/5/main.tex}
 \item There are three coins. One is a two headed coin (having head on both faces),
 another is a biased coin that comes up heads 75\% of the time and third is an
 unbiased coin. One of the three coins is chosen at random and tossed, it shows
