--- a/ncert/cond.tex
+++ b/ncert/cond.tex
@@ -138,9 +138,9 @@ given that his test result is positive ?
 \item There are three coins. One is a two headed coin (having head on both faces),
 another is a biased coin that comes up heads 75\% of the time and third is an
 unbiased coin. One of the three coins is chosen at random and tossed, it shows
-heads, what is the probability that it was the two headed coin ?
-\\
-\solution
+heads, what is the probability that it was the two headed coin?
+%\\
+%\solution
 %\input{ncert/12/13/3/6/cond.tex}
 
 \item An insurance company insured 2000 scooter drivers, 4000 car drivers and 6000
