--- a/ncert/cond.tex
+++ b/ncert/cond.tex
@@ -154,7 +154,7 @@ defective. All the items are put into one stockpile and then one item is chosen 
 random from this and is found to be defective. What is the probability that it was
 produced by machine B?
 
-\item. Two groups are competing for the position on the Board of directors of a
+\item Two groups are competing for the position on the Board of directors of a
 corporation. The probabilities that the first and the second groups will win are
 0.6 and 0.4 respectively. Further, if the first group wins, the probability of
 introducing a new product is 0.7 and the corresponding prbability is 0.3 if the
@@ -162,7 +162,7 @@ second group wins. Find the probability that the new product introduced was by
 the second group.
 \\
 \solution
-%\input{ncert/12/13/3/9/cond.tex}
+\input{ncert/12/13/3/9/cond.tex}
 \item Suppose a girl throws a die. If she gets a 5 or 6, she tosses a coin three times and
 notes the number of heads. If she gets 1, 2, 3 or 4, she tosses a coin once and
 notes whether a head or tail is obtained. If she obtained exactly one head, what
