--- a/ncert/cond.tex
+++ b/ncert/cond.tex
@@ -178,14 +178,16 @@ the lost card being a diamond.
 \item Probability that A speaks truth is
 $\frac{4}{5}$. A coin is tossed. A reports that a head
 appears. The probability that actually there was head is
+\begin{multicols}{4}
 \begin{enumerate}
 \item $\frac{4}{5}$ 
 \item $\frac{1}{2}$ 
 \item $\frac{1}{5}$ 
 \item $\frac{2}{5}$
 \end{enumerate}
+\end{multicols}
 \solution
-%\input{ncert/12/13/3/13/cond.tex}
+\input{ncert/12/13/3/13/cond.tex}
 \item 
 		If $A$ and $B$ are two events such that $A \subset B$ and $\pr{B} \neq 0$, then which of the following is correct ?
 \begin{enumerate}
