--- a/ncert/cond.tex
+++ b/ncert/cond.tex
@@ -197,14 +197,14 @@ appears. The probability that actually there was head is
 \item None of these
 \end{enumerate}
 \solution
-%\input{ncert/12/13/3/14/axioms.tex}
+\input{ncert/12/13/3/14/axioms.tex}
 \item $A$ and $B$ are two events such that $\pr{A} \neq 0$. Find $\pr{B \mid A}$, if
 \begin{enumerate}
 \item $A$ is a subset of $B$
 \item $A \cap B = \phi$
 \end{enumerate}
 \solution 
-	%\input{ncert/12/13/6/1/cond.tex}
+	\input{ncert/12/13/6/1/cond.tex}
 	%
 \item A couple has two children.
 \begin{enumerate}
