ncert/12/13/6/2 solution commented

--- a/ncert/cond.tex
+++ b/ncert/cond.tex
@@ -211,8 +211,8 @@ appears. The probability that actually there was head is
 \item Find the probability that both children are males, if it is known that at least one of the children is male.
 \item Find the probability that both children are females, if it is known that the elder child is a female.
 \end{enumerate}
-\solution 
-	%\input{ncert/12/13/6/2/cond.tex}
+%\solution 
+%	\input{ncert/12/13/6/2/cond.tex}
 	\item Suppose that $5\%$ of men and $0.25\%$ of women have grey hair. A grey haired person is selected at random. What is the probability that this person being male? Assume that there are equal number of males and females.
 \\
 \solution
