Add existing files

--- a/ncert/12/13/6/3/main.tex
+++ b/ncert/12/13/6/3/main.tex
@@ -1,5 +1,6 @@
 See \tabref{tab:ncert/12/13/6/3/table1}. 
-\begin{table}[h!]
+\begin{table}[H]
+\centering
 	\input{ncert/12/13/6/3/tables/table1.tex}
 	\caption{}
 	\label{tab:ncert/12/13/6/3/table1}
@@ -15,7 +16,7 @@ From the given information,
 \end{align}
 Using \eqref{eq:axiom-bayes}
 \begin{align}
-	p_{X|Y}(0|1)&=\frac{p_{Y|X}(1|0) \times p_X(0)}{\sum_{i=0}^{1}p_{Y|X}(1|i)p_Y(i)}
+	p_{X|Y}(0|1)&=\frac{p_{Y|X}(1|0) p_X(0)}{\sum_{i=0}^{1}p_{Y|X}(1|i)p_Y(i)}
 				=\frac{\frac{1}{40}}{\frac{21}{800}}
 				=\frac{20}{21}
 \end{align}
