--- a/ncert/cond.tex
+++ b/ncert/cond.tex
@@ -216,16 +216,21 @@ appears. The probability that actually there was head is
 \solution
 		\input{ncert/12/13/6/3/main.tex}
 \item Suppose we have four boxes A,B,C and D containing coloured marbles as given in \tabref{tab:12/13/6/12/table1}. 
-\begin{table}[htbp]
+\begin{table}[H]
 \centering
-%\input{ncert/12/13/6/12/tables/question_table.tex}
+\input{ncert/12/13/6/12/tables/question_table.tex}
 \caption{Question Table}
 \label{tab:12/13/6/12/table1}
 \end{table}
-One of the boxes has been selected at random and a single marble is drawn from it.$\,$If the marble is red,$\,$what is the probability that it was drawn from \\1) Box A ?\\2) Box B ?\\3) Box C ?
-\\
+One of the boxes has been selected at random and a single marble is drawn from it. If the marble is red,
+what is the probability that it was drawn from 
+\begin{multicols}{3}
+\begin{enumerate}
+\item Box A ?\item Box B ?\item Box C ?
+\end{enumerate}
+\end{multicols}
 \solution 
-	%\input{ncert/12/13/6/12/main.tex}
+	\input{ncert/12/13/6/12/main.tex}
 \item Bag I contains 3 red and 4 black balls and Bag II contains 4 red and 5 black balls.
 One ball is transferred from Bag I to Bag II and then a ball is drawn from Bag II.
 The ball so drawn is found to be red in colour. Find the probability that the
