--- a/app/cond.tex
+++ b/app/cond.tex
@@ -17,6 +17,11 @@ and
 	\pr{A' | B} = \frac{\pr{A'B}}{\pr{B}} = \frac{\pr{B}-\pr{AB}}{\pr{B}}
 \label{eq:axiom-cond-prime}
 \end{align}
+\item Total probability
+	\begin{align}
+		\pr{A} = \sum_{i=1}^{2}\pr{E_i}\pr{A|E_i}
+\label{eq:axiom-tot-prob}
+\end{align}
 \item Bayes' Theorem
 \begin{align}
 	\pr{E_1|A} &= \frac{\pr{E_1}\pr{A|E_1}}{\sum_{i=1}^{2}\pr{E_i}\pr{A|E_i}}
