--- a/axioms/word/axioms.tex
+++ b/axioms/word/axioms.tex
@@ -105,4 +105,8 @@ probability of such a number divisible by 5 is
 		\end{multicols}
 \solution
 \input{exemplar/11/16/3/22/main.tex}
+\item Box A contains 25 slips of which 19 are marked Rs 1 and others are marked Rs 5 each. Box B contains 50 slips of which 45 are marked Rs 1 and others are marked Rs 13 each. Slips of both boxes are poured into a third box and reshuffled. A slip is drawn at random. What is the probability that it is marked other than Rs 1?
+%	\\
+%\solution
+%\input{exemplar/10/13/3/35/main.tex}
 \end{enumerate}
