--- a/ncert/cond.tex
+++ b/ncert/cond.tex
@@ -243,9 +243,9 @@ balls. A bag and a ball is selected at random. Determine the probability of sele
 a black ball.\\
 \solution
 \input{exemplar/12/13/3/17/main.tex}
-\item While shuffling a pack of 52 playing cards, 2 cards are dropped. Find the probabilty that the missing cards to be of different colours.\\
+\item While shuffling a pack of 52 playing cards, 2 cards are dropped. Find the probabilty that the missing cards are of different colours.\\
 \solution
-%\input{exemplar/11/16/3/20/main.tex}
+\input{exemplar/11/16/3/20/main.tex}
 \item A bag contains $(2n + 1)$ coins. It is known that n of these coins have a head on
 both sides where as the rest of the coins are fair. A coin is picked up at random
 from the bag and is tossed. If the probability that the toss results in a head is $\frac{31}{42}$
