restarted ncert probability

--- a/main.tex
+++ b/main.tex
@@ -25,7 +25,7 @@
 \title{
 	%\begin{flushleft}
 	\begin{center}
-	Random Variables in High School 
+	Random Variables through Simulation 
 		%Probability
 	%MATRICES \\ In Geometry
 	%Matrices In Geometry
