--- a/ncert/cond.tex
+++ b/ncert/cond.tex
@@ -1,6 +1,6 @@
 \begin{enumerate}[label=\thesubsection.\arabic*,ref=\thesubsection.\theenumi]
 	\item 
-Given that E and F are events such that $P(E)=0.6, P(F)=0.3$ and $P(E F)=0.2$, find $P(E \mid F)$ and $P(F \mid E)$.
+Given that $E$ and $F$ are events such that $P(E)=0.6, P(F)=0.3$ and $P(E F)=0.2$, find $P(E \mid F)$ and $P(F \mid E)$.
 \\
 \input{ncert/12/13/1/1/cond.tex}
 	\item Compute $\pr{A|B}$, if $\pr{B}=0.5$ and $\pr{AB}=0.32$. 
@@ -246,7 +246,7 @@ a black ball.\\
 \item While shuffling a pack of 52 playing cards, 2 cards are dropped. Find the probabilty that the missing cards are of different colours.\\
 \solution
 \input{exemplar/11/16/3/20/main.tex}
-\item A bag contains $(2n + 1)$ coins. It is known that n of these coins have a head on
+\item A bag contains $(2n + 1)$ coins. It is known that $n$ of these coins have a head on
 both sides where as the rest of the coins are fair. A coin is picked up at random
 from the bag and is tossed. If the probability that the toss results in a head is $\frac{31}{42}$
 , determine the value of $n$.\\
