12/13/3/1 ncert table modified

--- a/ncert/12/13/3/1/cond.tex
+++ b/ncert/12/13/3/1/cond.tex
@@ -2,7 +2,8 @@ The given information is summarized in Tables \ref{tab:12/13/3/1/1} and
 \ref{tab:12/13/3/1/2}.
 \begin{table}[h]
 \centering
-\input{ncert/12/13/3/1/tables/table1.tex}
+\input{ncert/12/13/3/1/tables/12.13.3.1.tex}
+%\input{ncert/12/13/3/1/tables/table1.tex}
 \caption{}
 \label{tab:12/13/3/1/1}
 \end{table}
