--- a/main.tex
+++ b/main.tex
@@ -76,8 +76,10 @@ https://www.gnu.org/licenses/fdl-1.3.en.html
 %\renewcommand{\theequation}{\theenumi}
 \numberwithin{equation}{enumi}
 \numberwithin{figure}{enumi}
+\numberwithin{table}{enumi}
+%\numberwithin{table}{section} 
 %\renewcommand{\thefigure}{\theenumi}
-\renewcommand{\thetable}{\theenumi}
+%\renewcommand{\thetable}{\theenumi}
 
 %\section{Axioms}
 \section{Definitions}
