--- a/ncert/12/13/3/4/cond.tex
+++ b/ncert/12/13/3/4/cond.tex
@@ -5,7 +5,8 @@ and
 %
 \begin{table}[H]
 	\centering
-\input{ncert/12/13/3/4/tables/table1.tex}
+%\input{ncert/12/13/3/4/tables/table1.tex}
+\input{ncert/12/13/3/4/tables/12.13.3.4.tex}
 \caption{}
 \label{tab:ncert/12/13/3/4/1}
 \end{table}
