--- a/ncert/cond.tex
+++ b/ncert/cond.tex
@@ -122,7 +122,7 @@ $\frac{3}{4}$ be the probability that he knows the answer and
 $\frac{1}{4}$
 be the probability that he guesses. Assuming that a student who guesses at the
 answer will be correct with probability
-$\frac{1}{4}$. What is the probability that the student knows the answer given that he answered it correctly?
+$\frac{1}{4}$, what is the probability that the student knows the answer given that he answered it correctly?
 \\
 \solution
 \input{ncert/12/13/3/4/cond.tex}
